# pricewatch

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  compose-dev.yaml  compose.yaml  entrypoint.sh  items-example.json  items.json  main.py  pyproject.toml
.github/workflows/: build-docker.yaml
app/: server.py
app/db/: __init__.py  dataclasses.py  itemrepo.py  itemservice.py  test_itemrepo.py  test_itemservice.py
app/notifiers/: demo_notifier.py  telegram_notifier.py
app/readers/: __agents.py  __init__.py  atlas_tools.py  bestbuy_ca.py  bestbuy_com.py  cabelas_ca.py  canadacomputers.py  canadiantire.py  costco_ca.py  costco_com.py  dan_shop.py  dell.py  demo_store.py  firearmsoutletcanada.py  harborfreight.py  homedepot_ca.py  homedepot_com.py  ihl.py  petvalu.py  princessauto.py  readme.md
app/ui/: index.html  server.py  water.min.css
docker/: Dockerfile  compose.yaml
notifiers/: demo_notifier.py  telegram_notifier.py
readers/: homedepot_ca.py  ihl.py  readme.md
ui/: index.html  server.py
